tests/NormalTests/paczka1/fuzzy1/82798276.err
Error in line 3: VVyf S706 75,6
Error in line 2: S180 S928 29,5
Error in line 6: S180 S706 98,3
Error in line 18: jsZ S706 -1,5
Error in line 28: jsZ S706 189,6
